# cosmicpython-fastapi

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
chapter_01_domain_model/: test_batches.py
chapter_02_repository/: conftest.py  repository.py
chapter_04_service_layer/: Dockerfile  Makefile  conftest.py  docker-compose.yml  main.py  orm.py  services.py  test_allocate.py  test_api.py  test_orm.py  test_repository.py  test_services.py
chapter_05_high_gear_low_gear/: Dockerfile  Makefile  config.py  docker-compose.yml  requirements.txt
chapter_05_high_gear_low_gear/adapters/: orm.py  repository.py
chapter_05_high_gear_low_gear/entrypoints/: main.py
chapter_05_high_gear_low_gear/service_layer/: services.py
chapter_05_high_gear_low_gear/tests/: conftest.py
chapter_05_high_gear_low_gear/tests/e2e/: test_api.py
chapter_05_high_gear_low_gear/tests/integration/: test_orm.py  test_repository.py
chapter_05_high_gear_low_gear/tests/unit/: test_allocate.py  test_batches.py  test_services.py
chapter_06_uow/: Dockerfile
chapter_06_uow/tests/: conftest.py
chapter_06_uow/tests/e2e/: test_api.py
chapter_07_aggregate/: docker-compose.yml
chapter_07_aggregate/tests/: conftest.py
chapter_10_commands/: requirements.txt
chapter_11_external_events/: Dockerfile  Makefile  docker-compose.yml
chapter_11_external_events/tests/: conftest.py
chapter_12_cqrs/: Makefile  requirements.txt
chapter_12_cqrs/tests/: conftest.py
chapter_13_dependency_injection/: docker-compose.yml
chapter_13_dependency_injection/tests/: conftest.py
(+79 files in other folders)
